first commit in index.html

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
 [user]
 	name = dannie16
 	mail = danniegithub16@gmail.com
+	email = danniegithub16@gmail.com
 # Please adapt and uncomment the following lines:
 #	name = dannie16
 #	email = danniegithub16@gmail.com
